<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_share"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_share"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/action_refresh"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_clear"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_clear"
        android:title="@string/action_clear"/>

    <item
        android:id="@+id/action_select_fields"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_select_fields"
        android:title="@string/pref_title_select_fields"/>

    <item
        android:id="@+id/action_filter"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_filter"
        android:title="@string/action_filter"/>

    <item
        android:id="@+id/action_cell_id_format"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_cell_id_format"
        android:title="@string/action_cell_id_format"/>
    
    <item
        android:id="@+id/action_reset_filters"
        android:showAsAction="never"
        android:title="@string/action_reset_filters"/>
</menu>
